# advent-of-code2024

./: Cargo.toml  LICENSE  README.md  justfile
src/: graph.rs  grid.rs  lib.rs  vec2d.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day15/inputs/: example2.txt
src/day16/: mod.rs
src/day19/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/templ/: main.rs
src/util/: mod.rs
