[package]
name = "advent_of_code2024"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
itertools = "0.13.0"
openai_api_rust = "0.1.9"
pathdiff = "0.2.3"
rayon = "1.10.0"
regex = "1.11.1"

[[bin]]
name = "generate"
path = "bin/generate/main.rs"

[[bin]]
name = "readme"
path = "bin/readme/main.rs"

# # uncomment to enable release profile for faster tests
[profile.test]
inherits = "release"
# debug = true
